Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-base gst-plugins-base
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 641
    • Issues 641
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 80
    • Merge requests 80
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamerGStreamer
  • gst-plugins-basegst-plugins-base
  • Issues
  • #372
Closed
Open
Issue created Aug 03, 2017 by Bugzilla Migration User@bugzilla-migration

GLWINDOW EAGL bug with iOS11 and XCode 9.0 beta 4

Submitted by Elio Francesconi

Link to original bug (#785766)

Description

I'm testing compatibility with iOS 11 before the Apple release in september and I noticed a crash on GLWindow EAGL module.

Before crashing i see some warning then the crash on draw_cb.

Main Thread Checker: UI API called on a background thread: -[UIView layer]
PID: 1909, TID: 1403054, Thread name: (none), Queue name: org.freedesktop.gstreamer.glwindow, QoS: 0
Backtrace:

4   GstPlay                             0x0000000102503594 gst_gl_context_eagl_update_layer + 480  
5   GstPlay                             0x0000000102504a60 gst_gl_window_eagl_set_window_handle + 176  
6   GstPlay                             0x00000001035ebd78 _set_window_handle_cb + 104  
7   GstPlay                             0x0000000102504e54 __gst_gl_window_eagl_send_message_async_block_invoke + 72  
8   libdispatch.dylib                   0x00000001063498ec _dispatch_call_block_and_release + 24  
9   libdispatch.dylib                   0x00000001063498ac _dispatch_client_callout + 16  
10  libdispatch.dylib                   0x0000000106358380 _dispatch_queue_serial_drain + 692  
11  libdispatch.dylib                   0x000000010634ce30 _dispatch_queue_invoke + 332  
12  libdispatch.dylib                   0x000000010635935c _dispatch_root_queue_drain_deferred_wlh + 424  
13  libdispatch.dylib                   0x0000000106360298 _dispatch_workloop_worker_thread + 652  
14  libsystem_pthread.dylib             0x00000001851a024c _pthread_wqthread + 932  
15  libsystem_pthread.dylib             0x000000018519fe9c start_wqthread + 4  
  

2017-08-02 10:27:47.576231+0200 GstPlay[1909:1403054] [reports] Main Thread Checker: UI API called on a background thread: -[UIView layer]
PID: 1909, TID: 1403054, Thread name: (none), Queue name: org.freedesktop.gstreamer.glwindow, QoS: 0
Backtrace:

4   GstPlay                             0x0000000102503594 gst_gl_context_eagl_update_layer + 480  
5   GstPlay                             0x0000000102504a60 gst_gl_window_eagl_set_window_handle + 176  
6   GstPlay                             0x00000001035ebd78 _set_window_handle_cb + 104  
7   GstPlay                             0x0000000102504e54 __gst_gl_window_eagl_send_message_async_block_invoke + 72  
8   libdispatch.dylib                   0x00000001063498ec _dispatch_call_block_and_release + 24  
9   libdispatch.dylib                   0x00000001063498ac _dispatch_client_callout + 16  
10  libdispatch.dylib                   0x0000000106358380 _dispatch_queue_serial_drain + 692  
11  libdispatch.dylib                   0x000000010634ce30 _dispatch_queue_invoke + 332  
12  libdispatch.dylib                   0x000000010635935c _dispatch_root_queue_drain_deferred_wlh + 424  
13  libdispatch.dylib                   0x0000000106360298 _dispatch_workloop_worker_thread + 652  
14  libsystem_pthread.dylib             0x00000001851a024c _pthread_wqthread + 932  
15  libsystem_pthread.dylib             0x000000018519fe9c start_wqthread + 4  
  
  

Thread 8 Queue : org.freedesktop.gstreamer.glwindow (serial)

#0	0x0000000185196ba0 in _platform_memmove ()  
#1	0x0000000198ebcb1c in SCNGetPerformanceStatistics ()  
#2	0x0000000105ece064 in __clang_call_terminate ()  
#3	0x0000000105ecade8 in __clang_call_terminate ()  
#4	0x00000001060af3ec in __clang_call_terminate ()  
#5	0x00000001060acf08 in __clang_call_terminate ()  
#6	0x00000001025044c0 in gst_gl_context_eagl_swap_buffers at /Users/eggzero/Projects/EGGZERO/SRC/gst-examples/playback/player/ios/eagl/gstglcontext_eagl.m:341  
#7	0x0000000102504dec in draw_cb at /Users/eggzero/Projects/EGGZERO/SRC/gst-examples/playback/player/ios/eagl/gstglwindow_eagl.m:208  
#8	0x00000001035ecc9c in _run_message_sync at /Users/jan/devel/cerbero/build/sources/ios_universal/arm64/gst-plugins-bad-1.0-1.12.2/gst-libs/gst/gl/gstglwindow.c:571  
#9	0x0000000102504e54 in __gst_gl_window_eagl_send_message_async_block_invoke at /Users/eggzero/Projects/EGGZERO/SRC/gst-examples/playback/player/ios/eagl/gstglwindow_eagl.m:164  

To reproduce the issue use:

GStreamer 1.12.2
GstPlay: git://anongit.freedesktop.org/gstreamer/gst-examples
Compile GstPlay with XCode 9.0 beta 4 and play a video.

Version: 1.12.2

Assignee
Assign to
Time tracking